{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 42,
  "lineage": "16cc2cf2-8858-5bda-f85a-ae7dc580723d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "futebol_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00eb69d236edcfaf8",
            "arn": "arn:aws:ec2:us-east-2:315044339575:instance/i-0fe0291bbc63de91c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe0291bbc63de91c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "futebol_key2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eba6988e035a871c",
            "private_dns": "ip-10-0-1-5.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-18-224-52-173.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.52.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02822ec991b3f9a20",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa0b987b68efa1ec",
            "tags": {
              "Name": "futebol_ec2"
            },
            "tags_all": {
              "Name": "futebol_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05129967f278914dd"
            ]
          },
          "dependencies": [
            "aws_key_pair.futebol_key",
            "aws_security_group.futebol_sg",
            "aws_subnet.futebol_subnet",
            "aws_vpc.futebol_vpc_1",
            "data.aws_ami.futebol_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "futebol_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:315044339575:internet-gateway/igw-065d5c981c436b703",
            "id": "igw-065d5c981c436b703",
            "owner_id": "315044339575",
            "tags": {
              "Name": "futebol_internetgtw"
            },
            "tags_all": {
              "Name": "futebol_internetgtw"
            },
            "vpc_id": "vpc-06a505c99e001d1ae"
          },
          "dependencies": [
            "aws_vpc.futebol_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "futebol_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-065d5c981c436b703",
            "id": "r-rtb-03c0207c1687a77b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03c0207c1687a77b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.futebol_internet_gateway",
            "aws_route_table.futebol_route_table",
            "aws_vpc.futebol_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "futebol_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:315044339575:route-table/rtb-03c0207c1687a77b4",
            "id": "rtb-03c0207c1687a77b4",
            "owner_id": "315044339575",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "futebol_route_tb"
            },
            "tags_all": {
              "Name": "futebol_route_tb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a505c99e001d1ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.futebol_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "futebol_rtb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0030cc570c9083ece",
            "route_table_id": "rtb-03c0207c1687a77b4",
            "subnet_id": "subnet-0fa0b987b68efa1ec"
          },
          "dependencies": [
            "aws_route_table.futebol_route_table",
            "aws_subnet.futebol_subnet",
            "aws_vpc.futebol_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "futebol_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:315044339575:security-group/sg-05129967f278914dd",
            "description": "futebol security group",
            "egress": [],
            "id": "sg-05129967f278914dd",
            "ingress": [],
            "name": "futebol_sg",
            "name_prefix": "",
            "owner_id": "315044339575",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a505c99e001d1ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.futebol_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "futebol_sg_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2510193639",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05129967f278914dd",
            "security_group_rule_id": "sgr-022ecf5abd23784d8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.futebol_sg",
            "aws_vpc.futebol_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "futebol_sg_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-588570194",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05129967f278914dd",
            "security_group_rule_id": "sgr-0c73261b1161b382e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.futebol_sg",
            "aws_vpc.futebol_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "futebol_sg_out_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-394870014",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05129967f278914dd",
            "security_group_rule_id": "sgr-08c8e33eedb125737",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.futebol_sg",
            "aws_vpc.futebol_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "futebol_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:315044339575:subnet/subnet-0fa0b987b68efa1ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa0b987b68efa1ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "315044339575",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "futebol_subnet_public"
            },
            "tags_all": {
              "Name": "futebol_subnet_public"
            },
            "vpc_id": "vpc-06a505c99e001d1ae"
          },
          "dependencies": [
            "aws_vpc.futebol_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "futebol_vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:315044339575:vpc/vpc-06a505c99e001d1ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0db5dbeef7db795f5",
            "default_route_table_id": "rtb-06ec9d4c4a0370e4d",
            "default_security_group_id": "sg-0935e5304db07a331",
            "dhcp_options_id": "dopt-0075fa4543a80869c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a505c99e001d1ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ec9d4c4a0370e4d",
            "owner_id": "315044339575",
            "tags": {
              "Name": "futebol_vpc_1"
            },
            "tags_all": {
              "Name": "futebol_vpc_1"
            }
          }
        }
      ]
    }
  ]
}